Wyglad dla rejestracji i logowania

--- a/e-commerce-app/src/app/_helpers/variables.scss
+++ b/e-commerce-app/src/app/_helpers/variables.scss
@@ -1,5 +1,5 @@
 $primary_white: rgba(255, 255, 255, .87);
-$primary_black: rgba(0,0,0,.87);
+$primary_black: rgba(0, 0, 0, .87);
 
 $border_color: #e0e0e0;
 $my_grey: #616161;
@@ -9,3 +9,4 @@ $my_grey: #616161;
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
 }
+
