--- a/e-commerce-app/src/app/app.component.scss
+++ b/e-commerce-app/src/app/app.component.scss
@@ -27,7 +27,7 @@
 //
 //.menu {
 //  display: flex;
-//  align-items: center;
+//  align-products: center;
 //  cursor: pointer;
 //  .menu-text {
 //    margin-left: 10px;
@@ -56,7 +56,7 @@
 //  min-width: 200px;
 //}
 //
-//.purchase-items{
+//.purchase-products{
 //  padding: 0 10px;
 //  font-size: 15px;
 //}
