--- a/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.html
+++ b/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.html
@@ -31,10 +31,8 @@
   <app-header [sidenav]="sidenav"></app-header>
 
   <div class="content" fxLayout="column">
-    <span>Foo</span>
-    <span>Foo</span>
-    <span>Foo</span>
-    <span>Foo</span>
+    <!--<app-swiper></app-swiper>-->
+
   </div>
 
 
