--- a/e-commerce-app/src/app/shared-components/header/header.component.html
+++ b/e-commerce-app/src/app/shared-components/header/header.component.html
@@ -16,7 +16,12 @@
     <mat-icon fxShow fxHide.xs="true">keyboard_arrow_down</mat-icon>
   </button>
 
-  <button mat-button [matMenuTriggerFor]="userSettings">
+  <button mat-button *ngIf="user === null" (click)="openAuthDialog()">
+    <mat-icon>perm_identity</mat-icon>
+    <span fxHide.xs="true">Login</span>
+  </button>
+
+  <button mat-button [matMenuTriggerFor]="userSettings" *ngIf="user !== null">
     <mat-icon>account_circle</mat-icon>
     <span fxHide.xs="true">Paweł Idziak</span>
     <mat-icon fxShow fxHide.xs="true">keyboard_arrow_down</mat-icon>
@@ -25,26 +30,27 @@
 </mat-toolbar>
 
 <mat-menu #userSettings="matMenu">
-  <div mat-menu-item>
+  <div mat-menu-item class="text-center">
     Avatar
   </div>
   <button mat-menu-item>
-    <mat-icon>dialpad</mat-icon>
-    <span>Redial</span>
-  </button>
-  <button mat-menu-item disabled>
-    <mat-icon>voicemail</mat-icon>
-    <span>Check voicemail</span>
+    <mat-icon>perm_identity</mat-icon>
+    <span>Profile</span>
   </button>
   <button mat-menu-item>
-    <mat-icon>notifications_off</mat-icon>
-    <span>Disable alerts</span>
+    <mat-icon>settings</mat-icon>
+    <span>Settings</span>
+  </button>
+  <button mat-menu-item>
+    <mat-icon>exit_to_app</mat-icon>
+    <span>Logout</span>
   </button>
 </mat-menu>
 
 <mat-menu #card="matMenu">
   <mat-list (click)="$event.stopPropagation()" class="purchase">
-    <mat-list-item *ngFor="let item of items"> {{item}}</mat-list-item>
+    <mat-list-item *ngIf="products.length === 0">No products.</mat-list-item>
+    <mat-list-item *ngFor="let item of products"> {{item}}</mat-list-item>
   </mat-list>
 </mat-menu>
 
