--- a/e-commerce-app/src/app/_helpers/variables.scss
+++ b/e-commerce-app/src/app/_helpers/variables.scss
@@ -4,6 +4,9 @@ $primary_black: rgba(0, 0, 0, .87);
 $border_color: #e0e0e0;
 $my_grey: #616161;
 
+$material_red: #F44336;
+$material_green: #8BC34A;
+
 @mixin box_shadow() {
   -webkit-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
   -moz-box-shadow: 0 3px 6px rgba(0, 0, 0, 0.16), 0 3px 6px rgba(0, 0, 0, 0.23);
