--- a/e-commerce-app/src/app/core-components/auth-dialog/login/login.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/login/login.component.html
@@ -6,9 +6,12 @@
   </div>
 
   <div class="right">
+
+    <div class="error-msg" *ngIf="error">{{error}}</div>
+
     <mat-form-field>
       <input matInput placeholder="Email" [formControl]="email" required>
-      <mat-error *ngIf="email.invalid">{{getErrorMessage()}}</mat-error>
+      <mat-error *ngIf="email.invalid">{{getEmailErrorMsg()}}</mat-error>
     </mat-form-field>
 
     <mat-form-field>
@@ -16,7 +19,7 @@
              [type]="hidePassword ? 'password' : 'text'">
       <mat-icon matSuffix (click)="hidePassword = !hidePassword">{{hidePassword ? 'visibility' : 'visibility_off'}}
       </mat-icon>
-      <mat-error *ngIf="password.invalid">{{getErrorMessage()}}</mat-error>
+      <mat-error *ngIf="password.invalid">{{getPasswordErrorMsg()}}</mat-error>
     </mat-form-field>
 
     <button mat-raised-button color="primary" (click)="login()">Login</button>
