--- a/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
+++ b/e-commerce-app/src/app/core-components/auth-dialog/register/register.component.html
@@ -7,6 +7,9 @@
 
   <div class="right">
 
+    <div class="success-msg" *ngIf="response">{{response}}</div>
+    <div class="error-msg" *ngIf="error">{{error}}</div>
+
     <mat-form-field>
       <input matInput placeholder="Name" [formControl]="name" required>
       <mat-error *ngIf="name.invalid">{{getNameErrorMsg()}}</mat-error>
