--- a/e-commerce-app/src/app/shared-components/header/header.component.html
+++ b/e-commerce-app/src/app/shared-components/header/header.component.html
@@ -16,12 +16,12 @@
     <mat-icon fxShow fxHide.xs="true">keyboard_arrow_down</mat-icon>
   </button>
 
-  <button mat-button *ngIf="user === null" (click)="openAuthDialog()">
+  <button mat-button *ngIf="_authService.currentUser === null" (click)="openAuthDialog()">
     <mat-icon>perm_identity</mat-icon>
     <span fxHide.xs="true">Login</span>
   </button>
 
-  <button mat-button [matMenuTriggerFor]="userSettings" *ngIf="user !== null">
+  <button mat-button [matMenuTriggerFor]="userSettings" *ngIf="_authService.currentUser !== null">
     <mat-icon>account_circle</mat-icon>
     <span fxHide.xs="true">Paweł Idziak</span>
     <mat-icon fxShow fxHide.xs="true">keyboard_arrow_down</mat-icon>
@@ -41,7 +41,7 @@
     <mat-icon>settings</mat-icon>
     <span>Settings</span>
   </button>
-  <button mat-menu-item>
+  <button mat-menu-item (click)="logout()">
     <mat-icon>exit_to_app</mat-icon>
     <span>Logout</span>
   </button>
