Wstępne: wyswietlanie produktu i dodanie do koszyka

--- a/e-commerce-app/src/app/core-components/auth-dialog/auth-dialog.component.scss
+++ b/e-commerce-app/src/app/core-components/auth-dialog/auth-dialog.component.scss
@@ -1,6 +1,8 @@
+@import '../../_helpers/variables';
+
 .my-dialog {
   .mat-dialog-container {
-    @media (min-width: 599px) {
+    @media #{$gt_xs_size} {
       max-width: 50vw;
     }
     padding: 0;
