--- a/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.html
+++ b/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.html
@@ -28,11 +28,11 @@
 
   </mat-sidenav>
 
-  <app-header [sidenav]="sidenav"></app-header>
+  <app-header [sidenav]="sidenav" [cardNav]="cardNav"></app-header>
 
   <div class="content" fxLayout="column">
     <!--<app-swiper></app-swiper>-->
-
+    <app-products-list></app-products-list>
   </div>
 
 
