--- a/e-commerce-app/src/app/shared-components/header/header.component.html
+++ b/e-commerce-app/src/app/shared-components/header/header.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar color="primary" class="my-toolbar">
 
-  <button mat-button fxHide fxShow.xs="true" fxShow.sm="true" (click)="sidenav.toggle()">
+  <button mat-button fxHide fxShow.xs="true" fxShow.sm="true" (click)="sideNav.toggle()">
     <mat-icon>menu</mat-icon>
   </button>
 
@@ -10,19 +10,15 @@
     <input type="search" placeholder="Search">
   </div>
 
-  <button mat-button [matMenuTriggerFor]="card">
+  <button mat-button (click)="cardNav.toggle()">
     <mat-icon>shopping_cart</mat-icon>
     <span fxHide.xs="true">Card</span>
-    <mat-icon fxShow fxHide.xs="true">keyboard_arrow_down</mat-icon>
+    <span>({{_cardService.orders.length}} items)</span>
   </button>
 
   <button mat-button *ngIf="_authService.currentUser === null" (click)="openAuthDialog()">
     <mat-icon>perm_identity</mat-icon>
     <span fxHide.xs="true">Login</span>
-  </button>
-
-  <button mat-button (click)="openCardNav()">
-    <span>CARD</span>
   </button>
 
   <button mat-button [matMenuTriggerFor]="userSettings" *ngIf="_authService.currentUser !== null">
@@ -50,9 +46,4 @@
     <span>Logout</span>
   </button>
 </mat-menu>
-
-<mat-menu #card="matMenu" class="my-menu">
-  <app-card-list (click)="$event.stopPropagation()"></app-card-list>
-</mat-menu>
-
 
