--- a/e-commerce-app/src/app/core-components/products-list/product/product.component.scss
+++ b/e-commerce-app/src/app/core-components/products-list/product/product.component.scss
@@ -1,11 +1,50 @@
-.product-image{
+@import '../../../_helpers/variables';
+
+.product-image {
   height: 200px;
-  img{
+  img {
     height: 100%;
   }
 }
 
-.product-container{
+.product-container {
   padding: 10px;
-  width: 302px;
+  width: calc(100% - 20px); // 100% - padding
+  @media screen and (min-width: 500px) {
+    width: 230px;
+  }
+  @media #{$gt-sm_size}{
+    width: 203px;
+  }
+  @media #{$gt-md_size}{
+    width: 250px;
+  }
+
+}
+
+.info-container {
+  display: flex;
+  justify-content: space-between;
+  span {
+    padding: 5px 0;
+  }
+  .left {
+    flex: 0.6;
+    display: flex;
+    flex-direction: column;
+  }
+  .right {
+    flex: 0.4;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+    padding-left: 10px;
+  }
+}
+mat-card-actions {
+
+  button {
+    padding: 0;
+    margin: 0
+  }
 }
