Poprawione dodawanie produktu  do koszyka  (uwzględnienie dostępności), dodane sticky header

--- a/e-commerce-app/src/app/_helpers/variables.scss
+++ b/e-commerce-app/src/app/_helpers/variables.scss
@@ -6,6 +6,7 @@ $my_grey: #616161;
 
 $material_red: #F44336;
 $material_green: #8BC34A;
+$material_teal: #009688;
 
 $xs_size: 'screen and (max-width: 599px)';
 $sm_size: 'screen and (min-width: 600px) and (max-width: 959px)';
