--- a/e-commerce-app/src/app/core-components/products-list/product/product.component.html
+++ b/e-commerce-app/src/app/core-components/products-list/product/product.component.html
@@ -1,7 +1,7 @@
 <div class="product-container">
   <mat-card class="example-card">
     <div class="product-image">
-    <img class="" mat-card-image src="http://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img class="" mat-card-image src="https://s3.producthunt.com/static/kitty_265x244%402x.png" alt="Photo of a Shiba Inu">
     </div>
     <mat-card-content>
 
