--- a/e-commerce-app/src/app/core-components/products-list/products-list.component.html
+++ b/e-commerce-app/src/app/core-components/products-list/products-list.component.html
@@ -4,3 +4,29 @@
 
 </div>
 
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+sadas
