--- a/e-commerce-app/src/app/shared-components/card-list/card-list.component.html
+++ b/e-commerce-app/src/app/shared-components/card-list/card-list.component.html
@@ -11,7 +11,7 @@
   <div class="check-out">
     <div class="price">
       <span>Total price: </span>
-      <span><strong>{{_cardService.totalPrice}}</strong></span>
+      <span><strong>{{_cardService.totalPrice | currency: 'USD' : true}}</strong></span>
     </div>
     <button mat-raised-button color="primary">CHECK OUT</button>
   </div>
