--- a/e-commerce-app/src/app/core-components/products-list/products-list.component.scss
+++ b/e-commerce-app/src/app/core-components/products-list/products-list.component.scss
@@ -3,4 +3,7 @@
   flex-direction: row;
   flex-wrap: wrap;
   justify-content: center;
+  @media screen and (min-width: 790px) {
+    justify-content: flex-start;
+  }
 }
