Dodano automatyczne zapisywanie koszyka do localStorage

--- a/e-commerce-app/src/app/shared-components/header/header.component.html
+++ b/e-commerce-app/src/app/shared-components/header/header.component.html
@@ -4,6 +4,8 @@
     <mat-icon>menu</mat-icon>
   </button>
 
+  <span class="title" fxHide.xs="true">Title</span>
+
   <span class="spacer-horizontally"></span>
 
   <div class="search">
@@ -13,7 +15,8 @@
   <button mat-button (click)="cardNav.toggle()">
     <mat-icon>shopping_cart</mat-icon>
     <span fxHide.xs="true">Card</span>
-    <span>({{_cardService.orders.length}} items)</span>
+    <span *ngIf="_cardService.orders.length > 0">({{_cardService.orders.length}} items)</span>
+    <span *ngIf="_cardService.orders.length === 0">(empty)</span>
   </button>
 
   <button mat-button *ngIf="_authService.currentUser === null" (click)="openAuthDialog()">
@@ -47,6 +50,6 @@
   </button>
 </mat-menu>
 
-<div class="cos">
+<div class="cos" fxHide fxShow.xs="true" fxShow.sm="true">
   hehe
 </div>
