--- a/e-commerce-app/src/app/shared-components/header/header.component.html
+++ b/e-commerce-app/src/app/shared-components/header/header.component.html
@@ -50,6 +50,6 @@
   </button>
 </mat-menu>
 
-<div class="cos" fxHide fxShow.xs="true" fxShow.sm="true">
-  hehe
-</div>
+<!--<div class="cos" fxHide fxShow.xs="true" fxShow.sm="true">-->
+  <!--hehe-->
+<!--</div>-->
