--- a/e-commerce-app/src/app/_helpers/variables.scss
+++ b/e-commerce-app/src/app/_helpers/variables.scss
@@ -4,6 +4,7 @@ $primary_black: rgba(0, 0, 0, .87);
 $border_color: #e0e0e0;
 $my_grey: #616161;
 
+$material_indigo: #3f51b5;
 $material_red: #F44336;
 $material_green: #8BC34A;
 $material_teal: #009688;
