--- a/e-commerce-app/src/app/core-components/products-list/product/product.component.html
+++ b/e-commerce-app/src/app/core-components/products-list/product/product.component.html
@@ -1,10 +1,11 @@
 <div class="product-container">
   <mat-card class="example-card">
     <div class="product-image">
-    <img class="" mat-card-image src="https://s3.producthunt.com/static/kitty_265x244%402x.png" alt="Photo of a Shiba Inu">
+      <img class="" mat-card-image src="https://s3.producthunt.com/static/kitty_265x244%402x.png"
+           alt="Photo of a Shiba Inu">
     </div>
-    <mat-card-content>
 
+    <mat-card-content>
       <div class="info-container">
 
         <div class="left">
@@ -18,9 +19,8 @@
         </div>
 
       </div>
-
-
     </mat-card-content>
+
     <mat-card-actions class="text-center">
       <button mat-button (click)="addProductToCard()">
         <mat-icon>add_shopping_cart</mat-icon>
@@ -31,5 +31,7 @@
         <span>More</span>
       </button>
     </mat-card-actions>
+
   </mat-card>
+
 </div>
