--- a/e-commerce-app/src/app/core-components/products-list/products-list.component.scss
+++ b/e-commerce-app/src/app/core-components/products-list/products-list.component.scss
@@ -1,4 +1,28 @@
-.product-list{
+@import '../../_helpers/variables';
+
+.product-list-header {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  padding: 0 10px;
+  mat-icon {
+    color: darken($border_color, 20%);
+    font-size: 30px;
+    width: 30px;
+    height: 30px;
+    cursor: pointer;
+    transition: all, 0.2s;
+    padding: 0 10px;
+    &:hover {
+      color: $material_teal;
+    }
+  }
+  .active {
+    color: $material_teal;
+  }
+}
+
+.product-miniatures {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
@@ -6,4 +30,8 @@
   @media screen and (min-width: 790px) {
     justify-content: flex-start;
   }
+}
+
+.product-list {
+  padding: 20px;
 }
