--- a/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.scss
@@ -1,36 +1,33 @@
 @import '../../../_helpers/variables';
 
 .product {
-  padding: 10px;
-
-  &:hover {
-    background: $border_color;
-  }
-
   display: flex;
-  justify-content: space-between;
   align-items: center;
-
-  .avatar, .info, .quantity {
-    padding: 10px;
-  }
-
-  .info {
+  border-bottom: 1px solid $border_color;
+  padding: 30px 30px 30px 0;
+  .avatar {
+    flex: 0.3;
     display: flex;
-    flex-direction: column;
-    padding: 0 20px;
+    justify-content: center;
   }
-
+  .name {
+    flex: 0.5;
+    padding: 0 5px;
+  }
+  .price {
+    flex: 0.1;
+    padding: 0 5px;
+  }
   .quantity {
+    flex: 0.1;
     display: flex;
     align-items: center;
     justify-content: space-around;
     .quantity-product {
-      padding: 0 10px;
+      padding: 0 5px;
     }
     mat-icon {
       cursor: pointer;
     }
   }
-
 }
