--- a/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.scss
+++ b/e-commerce-app/src/app/shared-components/sidebar/sidebar.component.scss
@@ -32,10 +32,10 @@ mat-sidenav-container {
 }
 
 .content {
-  padding: 100px 0 20px 0;
-  @media #{$gt_xs_size} {
-    padding: 100px 20px 20px 20px;
-  }
+  padding: 65px 0 20px 0;
+  //@media #{$gt_xs_size} {
+  //  padding: 65px 20px 20px 20px;
+  //}
 }
 
 .card-nav {
