--- a/e-commerce-app/src/app/core-components/products-list/product/product.component.scss
+++ b/e-commerce-app/src/app/core-components/products-list/product/product.component.scss
@@ -42,9 +42,17 @@
   }
 }
 mat-card-actions {
-
   button {
     padding: 0;
     margin: 0
   }
+}
+
+.inStock{
+  color: $material_green;
+  font-weight: 700;
+}
+.notInStock{
+  color: $material_red;
+  font-weight: 700;
 }
