--- a/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.html
+++ b/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.html
@@ -3,7 +3,7 @@
   <div class="avatar">IMG</div>
 
   <div class="name">
-    <span>{{order.product.name}} das das dsad sad sdas sad asd sad as</span>
+    <span>{{order.product.name}}</span>
   </div>
 
   <div class="price">
