--- a/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.scss
+++ b/e-commerce-app/src/app/shared-components/card-list/card-item/card-item.component.scss
@@ -4,14 +4,14 @@
   display: flex;
   align-items: center;
   border-bottom: 1px solid $border_color;
-  padding: 30px 30px 30px 0;
+  padding: 30px 0;
   .avatar {
     flex: 0.3;
-    display: flex;
-    justify-content: center;
+    //display: flex;
+    //justify-content: center;
   }
   .name {
-    flex: 0.5;
+    flex: 0.4;
     padding: 0 5px;
   }
   .price {
@@ -19,7 +19,7 @@
     padding: 0 5px;
   }
   .quantity {
-    flex: 0.1;
+    flex: 0.2;
     display: flex;
     align-items: center;
     justify-content: space-around;
