--- a/e-commerce-app/src/app/shared-components/card-list/card-list.component.html
+++ b/e-commerce-app/src/app/shared-components/card-list/card-list.component.html
@@ -4,7 +4,14 @@
 
 <div *ngIf="_cardService.orders.length > 0">
 
-  <div *ngFor="let order of _cardService.orders">
+  <div class="card-header">
+    <button mat-button (click)="clearCard()">
+      <span>Clear card</span>
+      <mat-icon>delete_forever</mat-icon>
+    </button>
+  </div>
+
+  <div *ngFor="let order of _cardService.orders" style="padding: 10px;">
     <app-product [order]="order"></app-product>
   </div>
 
