--- a/e-commerce-app/src/app/core-components/shopping-cart/shopping-cart.component.html
+++ b/e-commerce-app/src/app/core-components/shopping-cart/shopping-cart.component.html
@@ -6,13 +6,13 @@
 
   <div class="card-header">
     <button mat-button (click)="clearCard()">
-      <span>Clear card</span>
+      <span>Clear cart</span>
       <mat-icon>delete_forever</mat-icon>
     </button>
   </div>
 
   <div *ngFor="let order of _cardService.orders" style="padding: 10px;">
-    <app-product [order]="order"></app-product>
+    <app-card-item [order]="order"></app-card-item>
   </div>
 
   <div class="check-out">
